--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "mongoose-paginate-v2": "^1.7.31",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0"
   },
