--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "lint": "eslint .",
-    "build": "rm -rf .cache/yarn && yarn --version 1.22.21 install"
+    "build": "yarn --version 1.22.21 install"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
