--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "bufs-sexshop-api",
+  "version": "2.0.0",
+  "description": "Modern REST API for sexshop catalog",
+  "type": "module",
   "main": "src/server.js",
   "license": "MIT",
-  "author": "Carlos Valencia Henao <rasfreed@gmail.com> (https://www.linkedin.com/in/carlosvalenciahenao)",
+  "author": "Bufs sex shop dev",
   "engines": {
-    "node": "14.17.5",
-    "npm": "6.14.14"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "lint": "eslint .",
-    "build": "npm install"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "busboy": "^0.3.1",
-    "cloudinary": "^1.27.1",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.11",
-    "mongoose-paginate-v2": "^1.7.31",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "mongoose-paginate-v2": "^1.9.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.7.0"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13",
-    "standard": "^16.0.4"
-  },
-  "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "eslint": "^9.3.0",
+    "nodemon": "^3.1.0"
   }
 }
