"fix: add dummy build script for render"

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "echo 'No build needed'"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
